[package]
name = "insize"
version = "0.1.0"
authors = ["slyo <sean.lyo@outlook.com>"]
edition = "2018"
description = "Fast insert size distribution plot from bam."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "^1"
flate2 = "^1"
serde = "^1"
serde_json = "^1"
plotters = "^0.3.0"
plotlib = "^0.5.1"

[dependencies.clap]
version = "^2.33.3"
features = ["suggestions"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
